8159715: Fix for 8072422 is incorrect

Fixed several issues introduced by 8072422.

Reviewed-by: zmajo, kvn